--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,16 @@
 <!doctype html>
 <html lang="en">
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+<!--Brauche ich das oder nicht?
 
 <div class="scrollbar scrollbar-default">
     <div class="force-overflow"></div>
 </div>
+-->
 
-<head>
+<head class="scrollbar scrollbar-default">
     <meta charset="utf-8">
     <title>Myportfolio</title>
     <base href="/">
@@ -15,7 +20,7 @@
         <a target="_blank" href="https://icons8.com/icon/71257/angularjs">AngularJS</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
 </head>
 
-<body>
+<body data-aos-easing="ease-out-back" data-aos-duration="1000" data-aos-delay="0">
     <app-root></app-root>
 </body>
 
