--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
     <title>Myportfolio</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!--<link rel="icon" type="image/x-icon" href="favicon.ico">-->
+    <link rel="icon" href="assets/img/portfolio-logo.png">
 </head>
 
 <body data-aos-easing="ease-out-back" data-aos-duration="1000" data-aos-delay="0">
